<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Aile</string>
    <string name="welcome_tip_01" translatable="false">專屬商務號、全通路串連、客戶互動管理</string>
    <string name="welcome_title_01" translatable="false">讓您聊天就能做生意</string>
    <string name="welcome_tip_02" translatable="false">整合網路、社群平台、通訊APP</string>
    <string name="welcome_title_02" translatable="false">單一平台即時回覆</string>
    <string name="welcome_tip_03" translatable="false">集合各種進線資訊</string>
    <string name="welcome_title_03" translatable="false">精準辨識整合歸戶</string>
    <string name="welcome_tip_04" translatable="false">.</string>
    <string name="welcome_title_04" translatable="false">為您打造\n不同凡響的客戶服務</string>
    <string name="start_use" translatable="false">開始使用</string>
    <string name="title_activity_draw_chart_graph" translatable="false">DrawChartGraphActivity</string>
    <string name="country_code" translatable="false">+886</string>
    <string-array name="contact_items">
        <item>加入好友</item>
        <item>社團列表</item>
    </string-array>
    <string name="warning_added" translatable="false">已添加</string>
    <string name="have_selected_files" translatable="false">已選擇<xliff:g id="num">%1$s</xliff:g>個文件</string>
    <string name="send_file" translatable="false">送出<xliff:g id="num">%1$s</xliff:g></string>
    <string name="file_too_big" translatable="false">選擇的檔案超過(<xliff:g id="size">%1$s</xliff:g>M)限制</string>
    <string name="warning_camera" translatable="false">照相機</string>
    <string name="warning_photos" translatable="false">相簿</string>
    <string name="network_error" translatable="false">網路連接錯誤，請檢查後再試試</string>
    <string name="mobile_connection" translatable="false">當前是 移動數據連接</string>
    <string name="wifi_connection" translatable="false">當前是 wifi連接</string>
    <string name="no_connection" translatable="false">當前無網路連接，請檢查您的網路</string>
    <string name="bruce_photo_save" translatable="false">已儲存至%1$s</string>
    <string name="bruce_photo_save_failed" translatable="false">圖片儲存失敗</string>
    <string name="name_length_tip" translatable="false">暱稱不能超過20個字</string>
    <string name="tenant_name_length_tip" translatable="false">團隊名稱不能超過20個字</string>
    <string name="mood_length_tip" translatable="false">心情不能超過100個字</string>
    <string name="description_length_tip" translatable="false">團隊說明不能超過150個字</string>
    <string name="photo_save_to_phone" translatable="false">已儲存至手機</string>
    <string name="photo_save_to_photo" translatable="false">已儲存至照片</string>
    <string name="warning_downloading" translatable="false">下載中…</string>
    <string name="warning_uploading" translatable="false">上傳中…</string>
    <string name="stop_service" translatable="false">結束服務</string>
    <string name="cancel" translatable="false">取消</string>
    <string name="switch_identity_toast" translatable="false">使用%s身份服務</string>
    <string name="switch_identity_failed_toast" translatable="false">切換身份失敗</string>
    <string name="recording_cancel" translatable="false">鬆開手指，取消發送</string>
    <string name="recording_cancel_notice" translatable="false">手指上滑，取消發送</string>
    <string name="wording_searching" translatable="false">搜索中…</string>
    <string name="wording_transfering" translatable="false">轉發中…</string>
    <string name="wording_loading" translatable="false">加載中…</string>
    <string name="wording_processing" translatable="false">處理中…</string>
    <string name="repairs_issue_options_text_room" translatable="false">聊天室</string>
    <string name="repairs_issue_options_text_addressbook" translatable="false">聯絡人</string>
    <string name="repairs_issue_options_text_message" translatable="false">消息</string>
    <string name="repairs_issue_options_text_call" translatable="false">通話</string>
    <string name="repairs_issue_options_text_video" translatable="false">影片</string>
    <string name="repairs_issue_options_text_other" translatable="false">其它</string>
    <string name="date_selector_text_plus_8_sec" translatable="false">+8秒</string>
    <string name="date_selector_text_plus_10_minute" translatable="false">+10分</string>
    <string name="date_selector_text_plus_30_minute" translatable="false">+30分</string>
    <string name="date_selector_text_plus_1_hour" translatable="false">+1小時</string>
    <string name="date_selector_text_plus_1_day" translatable="false">+1天</string>
    <string name="date_selector_text_plus_2_day" translatable="false">+2天</string>
    <string name="date_selector_text_plus_3_day" translatable="false">+3天</string>
    <string name="date_selector_text_1_week" translatable="false">+1週</string>
    <string name="date_selector_text_2_week" translatable="false">+2週</string>
    <string name="date_selector_text_1_month" translatable="false">+1個月</string>
    <string name="toolbar_chat_title" translatable="false">聊天</string>
    <string name="toolbar_service_number_title" translatable="false">服務號</string>
    <string name="toolbar_contact_title" translatable="false">聯絡人</string>
    <string name="toolbar_todo_title" translatable="false">工作列表</string>
    <string name="warning_update_failed" translatable="false">更新失敗</string>
    <string name="warning_delete_failed" translatable="false">刪除失敗</string>
    <string name="warning_plug_in_earphone" translatable="false">插入耳機</string>
    <string name="warning_want_to_delete_this_chat_room" translatable="false">是否刪除該聊天？</string>
    <string name="rich_menu_text_transpond" translatable="false">轉發</string>
    <string name="rich_menu_text_copy" translatable="false">複製</string>
    <string name="rich_menu_text_reply" translatable="false">回覆</string>
    <string name="rich_menu_text_screenshots" translatable="false">截圖</string>
    <string name="rich_menu_text_recover" translatable="false">收回</string>
    <string name="rich_menu_text_delete" translatable="false">刪除</string>
    <string name="rich_menu_text_work" translatable="false">工作</string>
    <string name="rich_menu_text_todo" translatable="false">記事</string>
    <string name="rich_menu_text_anonymous" translatable="false">匿名</string>
    <string name="rich_menu_text_filter" translatable="false">篩選</string>
    <string name="rich_menu_text_single_copy" translatable="false">複製</string>
    <string name="rich_menu_text_quote" translatable="false">引用</string>
    <string name="consult_ai_text" translatable="false">AI 諮詢</string>
    <string name="barcode_detector_scan_title" translatable="false">掃一掃</string>
    <string name="notify_new_reminder" translatable="false">[新記事]</string>
    <string name="room_cell_swipe_menu_setup_read" translatable="false">已讀</string>
    <string name="room_cell_swipe_menu_setup_unread" translatable="false">未讀</string>
    <string name="room_cell_swipe_menu_setup_untreated" translatable="false">未處理</string>
    <string name="alert_notes" translatable="false">標示</string>
    <string name="service_room_sectioned_robot_service" translatable="false">AI 服務</string>
    <string name="service_room_sectioned_my_service" translatable="false">我服務中</string>
    <string name="service_room_sectioned_others_service" translatable="false">服務中</string>
    <string name="service_room_sectioned_no_agent_unread" translatable="false">剛進件</string>
    <string name="service_room_sectioned_monitor_ai_service" translatable="false">監控AI</string>
    <string name="service_room_switch_sort_title" translatable="false">服務號聊天室排序</string>
    <string name="service_room_switch_to_category_sort" translatable="false">依分組</string>
    <string name="service_room_switch_to_time_sort" translatable="false">依時間</string>
    <string name="service_room_sectioned_other" translatable="false">其它</string>
    <string name="service_room_sectioned_action_chat" translatable="false">聊天</string>
    <string name="service_room_sectioned_action_waittransfer" translatable="false">等待接續</string>
    <string name="service_room_sectioned_action_broadcast" translatable="false">群發</string>
    <string name="service_room_sectioned_action_welcome" translatable="false">歡迎語</string>
    <string name="service_room_sectioned_action_members" translatable="false">成員</string>
    <string name="service_room_sectioned_action_home" translatable="false">主頁</string>
    <string name="barcode_detector_my_qrcode" translatable="false">我的QR Code</string>
    <string name="barcode_detector_flash_open" translatable="false">打開照明燈</string>
    <string name="barcode_detector_alert_welcome_message" translatable="false">歡迎您使用Aile，您要加入的企業為</string>
    <string name="barcode_detector_alert_welcome_message_tail" translatable="false">，請確認。</string>
    <string name="base_top_rich_menu_create_crowd" translatable="false">建立社團</string>
    <string name="base_top_rich_menu_add_label" translatable="false">新增標籤</string>
    <string name="base_top_rich_menu_add_friend" translatable="false">加入好友</string>
    <string name="base_top_rich_menu_exit_discuss" translatable="false">退出聊天</string>
    <string name="base_top_rich_menu_dismiss_crowd" translatable="false">解散社團</string>
    <string name="base_top_rich_menu_exit_crowd" translatable="false">退出社團</string>
    <string name="base_top_rich_menu_search" translatable="false">搜索</string>
    <string name="base_top_rich_menu_cancel_mute" translatable="false">開啟通知</string>
    <string name="base_top_rich_menu_open_mute" translatable="false">關閉通知</string>
    <string name="base_top_rich_menu_setting" translatable="false">設定</string>
    <string name="sign_in_cp_btn_wording" translatable="false">加&#160;&#160;入</string>
    <string name="already_send_sms" translatable="false">已將驗證碼發送至 %s，</string>
    <string name="please_enter_verify_code" translatable="false">請於下方輸入簡訊驗證碼</string>
    <string name="please_enter_when_not_receive" translatable="false">沒有收到驗證碼，請按此&#160;</string>
    <string name="login" translatable="false">登入</string>
    <string name="refused_login" translatable="false">拒絕登入</string>
    <string name="alloiw_auto_login" translatable="false">允許自動登入</string>
    <string name="number_1" translatable="false">1</string>
    <string name="number_2" translatable="false">2</string>
    <string name="number_3" translatable="false">3</string>
    <string name="fill_group_info" translatable="false">填寫團隊資訊</string>
    <string name="scan_group_qr_code" translatable="false">掃描團隊QR Code</string>
    <string name="wait_confirm" translatable="false">等待審核確認</string>
    <string name="start_join" translatable="false">開始加入</string>
    <string name="group_report_text" translatable="false">檢&#160;&#160;&#160;&#160;舉</string>
    <string name="text_report_item_1" translatable="false">該帳號發佈色情/違法等不良信息</string>
    <string name="text_report_item_2" translatable="false">該帳號存在詐騙行為</string>
    <string name="text_report_item_3" translatable="false">該帳號對我進行騷擾</string>
    <string name="text_report_item_4" translatable="false">該帳號侵犯未成年人權益</string>
    <string name="text_report_item_5" translatable="false">該帳號存在其他違規行為</string>
    <string name="text_report_to_platform" translatable="false">向平台檢舉</string>
    <string name="text_report_to_team" translatable="false">向團隊檢舉</string>
    <string name="text_report_item_6" translatable="false">此人非團隊成員</string>
    <string name="text_report_item_7" translatable="false">該成員已離職</string>
    <string name="text_group_report_submit" translatable="false">提&#160;&#160;&#160;&#160;交</string>
    <string name="text_upload_background_picture" translatable="false">上傳背景圖片</string>
    <string name="text_photo_album" translatable="false">相簿</string>
    <string name="text_camera" translatable="false">照相機</string>
    <string name="text_get_location_permission_title" translatable="false">開啟定位服務</string>
    <string name="text_get_location_permission_sub_title" translatable="false">開啟定位服務以開始使用完整服務</string>
    <string name="text_get_location_permission_cancel" translatable="false">不用了，謝謝</string>
    <string name="text_get_location_permission_submit" translatable="false">在「設定」中開啟</string>
</resources>