<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:padding="@dimen/dp_10">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_radius_12_white"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textColor="@color/color_007AFF"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

        <LinearLayout

            android:id="@+id/linearLayout6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_radius_12_white"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/dialogTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                tools:text="@string/text_upload_background_picture"
                android:textColor="@color/hint_color" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/split_line" />

            <Button
                android:id="@+id/btnPhotoAlbum"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:text="@string/text_photo_album"
                android:textColor="@color/color_007AFF"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/split_line" />

            <Button
                android:id="@+id/btnCamera"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:text="@string/text_camera"
                android:textColor="@color/color_007AFF"
                android:textSize="17sp" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>