<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionBarSize"
            android:background="?attr/secondaryColor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/arrow_left"
                android:contentDescription="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/pager_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                android:text="@string/group_report_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/color_FAFAFA"
            app:layout_constraintTop_toBottomOf="@id/title_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/title_platform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/btn_grey"
                android:text="@string/text_report_to_platform"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/rg_complaint"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/title_platform"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_D8D8D8" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:checked="false"
                    android:textSize="17sp"
                    android:paddingHorizontal="11dp"
                    android:layout_marginStart="18dp"
                    android:button="?attr/radioButtonResource"
                    android:textColor="@color/item_name"
                    android:background="@color/white"
                    android:text="@string/text_report_item_1"
                    android:id="@+id/rb1"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_D8D8D8" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:checked="false"
                    android:textSize="17sp"
                    android:button="?attr/radioButtonResource"
                    android:layout_marginStart="18dp"
                    android:paddingHorizontal="11dp"
                    android:textColor="@color/item_name"
                    android:background="@color/white"
                    android:text="@string/text_report_item_2"
                    android:id="@+id/rb2"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_D8D8D8" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:checked="false"
                    android:button="?attr/radioButtonResource"
                    android:layout_marginStart="18dp"
                    android:textSize="17sp"
                    android:paddingHorizontal="11dp"
                    android:textColor="@color/item_name"
                    android:background="@color/white"
                    android:text="@string/text_report_item_3"
                    android:id="@+id/rb3"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_D8D8D8" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:checked="false"
                    android:textSize="17sp"
                    android:button="?attr/radioButtonResource"
                    android:layout_marginStart="18dp"
                    android:paddingHorizontal="11dp"
                    android:textColor="@color/item_name"
                    android:background="@color/white"
                    android:text="@string/text_report_item_4"
                    android:id="@+id/rb4"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_D8D8D8" />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:checked="false"
                    android:textSize="17sp"
                    android:button="?attr/radioButtonResource"
                    android:layout_marginStart="18dp"
                    android:paddingHorizontal="11dp"
                    android:textColor="@color/item_name"
                    android:background="@color/white"
                    android:text="@string/text_report_item_5"
                    android:id="@+id/rb5"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_D8D8D8" />

                <TextView
                    android:id="@+id/title_team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/btn_grey"
                    android:text="@string/text_report_to_team"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="15dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_D8D8D8" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:checked="false"
                    android:textSize="17sp"
                    android:paddingHorizontal="11dp"
                    android:button="?attr/radioButtonResource"
                    android:layout_marginStart="18dp"
                    android:textColor="@color/item_name"
                    android:background="@color/white"
                    android:text="@string/text_report_item_6"
                    android:id="@+id/rb6"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_D8D8D8" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:checked="false"
                    android:textSize="17sp"
                    android:button="?attr/radioButtonResource"
                    android:layout_marginStart="18dp"
                    android:paddingHorizontal="11dp"
                    android:textColor="@color/item_name"
                    android:background="@color/white"
                    android:text="@string/text_report_item_7"
                    android:id="@+id/rb7"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_D8D8D8" />

            </RadioGroup>

            <Button
                android:id="@+id/btn_agree_send"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="?attr/secondaryColor"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/text_group_report_submit"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>