<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/bg_login_cp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logo"
            android:layout_width="145dp"
            android:layout_height="76dp"
            android:layout_marginTop="102dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_image_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:text="@string/number_1"
                    android:background="@drawable/bg_oval_red_full"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:layout_width="25dp"
                    android:layout_height="25dp"/>
                <TextView
                    android:layout_marginStart="7dp"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:text="@string/scan_group_qr_code"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:text="@string/number_2"
                    android:background="@drawable/bg_oval_green_full"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:layout_width="25dp"
                    android:layout_height="25dp"/>
                <TextView
                    android:layout_marginStart="7dp"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:text="@string/wait_confirm"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:visibility="invisible"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:text="@string/number_3"
                    android:background="@drawable/bg_oval_blue_full"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:layout_width="25dp"
                    android:layout_height="25dp"/>
                <TextView
                    android:layout_marginStart="7dp"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:text="@string/fill_group_info"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bg_join_group"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:src="@drawable/ic_icon_close_close"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/btn_start_join"
            android:layout_marginBottom="26dp"
            android:text="@string/start_join"
            android:gravity="center"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:background="@drawable/bg_oval_blue_full"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="145dp"
            android:layout_height="40dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>